--- a/Guess_Who.ipynb
+++ b/Guess_Who.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2a647620",
+   "execution_count": 41,
+   "id": "28d35bce",
    "metadata": {},
    "outputs": [
     {
@@ -20,30 +20,54 @@
     "abstract Grammar = {\n",
     "    cat\n",
     "        Name;\n",
-    "        Adjective;\n",
-    "        AP;\n",
+    "        WVerb;\n",
     "        S;\n",
+    "        HVerb;\n",
+    "        BVerb;\n",
+    "        Noun;\n",
+    "        Color;\n",
+    "        Adj;\n",
+    "        VP;\n",
+    "        Conn;    -- connectives like \"and\", \"or\", ...\n",
+    "    \n",
     "    fun\n",
-    "        adj : Adjective;\n",
-    "        makeAP1 : Name -> Adjective -> AP;\n",
-    "        makeAP2 : Name -> Adjective -> AP;\n",
-    "        makeAP3 : Name -> Adjective -> AP;\n",
-    "        makeS1 : Name -> AP -> S;\n",
-    "        --makeS2 : Name -> AP -> S;        \n",
-    "       -- makeS3 : Name -> AP -> S;\n",
+    "        makeVP1 : WVerb -> Noun -> VP;\n",
+    "        makeVP2 : HVerb -> Color -> VP;\n",
+    "        makeVP3 : BVerb -> Adj -> VP;\n",
+    "        makeS : Name -> VP -> S;\n",
+    "        negateWV : WVerb -> WVerb;\n",
+    "        negateHV : HVerb -> HVerb;\n",
+    "        negateBV : BVerb -> BVerb;\n",
+    "        -- \"Peter doesn't / isn't\"\n",
+    "        \n",
+    "        -- \"howl\" -> \"scream\" -> \"howl and scream\"\n",
+    "        combineVP : VP -> Conn -> VP -> VP;\n",
+    "        combineS : S -> Conn -> S -> S;\n",
+    "\n",
+    "        and : Conn;\n",
+    "        or : Conn;\n",
+    "\n",
     "        peter : Name;\n",
     "        mary : Name;\n",
-    "        fido : Name;\n",
     "        john : Name;\n",
-    "        and : AP -> AP -> AP;\n",
+    "        fido : Name;\n",
+    "        is : BVerb;\n",
+    "        wears : WVerb;\n",
+    "        has : HVerb;\n",
+    "        male : Adj;\n",
+    "        female : Adj;\n",
+    "        hat : Noun;\n",
+    "        red : Color;\n",
+    "        green : Color;\n",
+    "        black : Color;\n",
     "        \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9ac2f0d4",
+   "execution_count": 43,
+   "id": "aa111543",
    "metadata": {},
    "outputs": [
     {
@@ -58,72 +82,72 @@
    ],
    "source": [
     "concrete GrammarEng of Grammar = {\n",
-    "    param\n",
-    "        Gender = Masc | Fem | Neut ;\n",
-    "        Hair_Colour = Black | Green | Red;\n",
-    "        Wears_Hat = Yes | No;\n",
+    "\n",
     "    lincat\n",
-    "        Name = {s: Str; g: Gender;hair: Hair_Colour; hat: Wears_Hat};\n",
-    "        Adjective = {g: Gender=> Str; color: Hair_Colour => Str; h : Wears_Hat => Str};\n",
+    "        Name = Str;\n",
+    "        Noun = Str;\n",
+    "        Color = Str;\n",
+    "        Adj = Str;\n",
+    "        WVerb = {inf : Str; fin : Str};\n",
+    "        HVerb = {inf : Str; fin : Str};\n",
+    "        BVerb = {inf : Str; fin : Str};\n",
+    "        VP = {inf : Str; fin : Str};\n",
+    "        Conn = Str;\n",
     "        S = Str;\n",
-    "        AP = Str;\n",
     "    \n",
     "    lin\n",
-    "        peter = {s = \"Peter\"; g = Masc; hair = Black; hat = No};\n",
-    "        mary = {s = \"Mary\"; g = Fem; hair = Red; hat = Yes};\n",
-    "        fido = {s = \"Fido\"; g = Neut; hair = Black; hat = Yes};\n",
-    "        john = {s = \"John\"; g = Masc; hair = Green; hat = Yes};\n",
-    "        adj  = {\n",
-    "            g = table {\n",
-    "                Masc => \"is male\";\n",
-    "                Fem =>  \"is female\";\n",
-    "                Neut => \"is neutral\"\n",
-    "            };\n",
-    "            color = table {\n",
-    "                Black => \"has black hair\";\n",
-    "                Red =>  \"has red hair\";\n",
-    "                Green => \"has green hair\"\n",
-    "            };\n",
-    "            h = table {\n",
-    "                Yes => \"wears a hat\";\n",
-    "                No =>  \"wears no hat\"\n",
-    "            }\n",
-    "        };\n",
-    "        makeAP1 name ap = ap.g ! name.g;\n",
-    "        makeAP2 name ap = ap.color ! name.hair;\n",
-    "        makeAP3 name ap = ap.h ! name.hat;\n",
-    "        and a b = a ++ \"and\" ++ b;\n",
+    "        peter = \"Peter\";\n",
+    "        mary = \"Mary\";\n",
+    "        fido = \"Fido\";\n",
+    "        john = \"John\";\n",
+    "        is = {inf = \"is\"; fin = \"is\"};\n",
+    "        wears = {inf = \"wear\"; fin = \"wears\"};\n",
+    "        has = {inf = \"have\"; fin = \"has\"};\n",
+    "        male = \"male\";\n",
+    "        female = \"female\";\n",
+    "        hat = \"hat\";\n",
+    "        red = \"red hair\";\n",
+    "        green = \"green hair\";\n",
+    "        black = \"black hair\";\n",
+    "        and = \"and\";\n",
+    "        or = \"or\";\n",
+    "        combineVP v1 c v2 = {fin=v1.fin++c++v2.fin;\n",
+    "                inf=v1.inf++c++v2.inf};\n",
+    "        combineS s1 c s2 = s1 ++ c ++ s2;\n",
+    "        negateWV vp = {fin=\"doesn't\" ++ vp.inf;\n",
+    "                       inf= vp.inf ++ \"not\"};\n",
+    "        negateHV vp = {fin=\"doesn't\" ++ vp.inf;\n",
+    "                       inf= vp.inf ++ \"not\"};\n",
+    "        negateBV vp = {fin= vp.inf ++ \"not\";\n",
+    "                       inf= vp.inf ++ \"not\"};\n",
     "        \n",
-    "        -- makeS2 name adjphrase = name.s ++ \"has\" ++ name.hair;\n",
-    "        -- makeS3 name adjphrase = name.s ++ \"is\" ++ name.gend;\n",
-    "        -- makeS4 name adjphrase = name.s ++ \"wears\" ++ name.hat;\n",
-    "        \n",
-    "        -- to make a sentence, we take the string of a name (`name.s`)\n",
-    "        -- and append the matching verb phrase, i.e. we have to look up\n",
-    "        -- the right form in the table `vp.s` using the gender `name.g`.\n",
-    "        -- the `!` operator is used for the lookup.\n",
-    "        \n",
-    "        makeS1 name ap = name.s ++ ap;\n",
-    "        --makeS2 name ap = name.s ++ ap.color ! name.hair;\n",
-    "        --makeS3 name ap = name.s ++ ap.h ! name.hat;\n",
+    "        makeVP1 verb chara = {inf = verb.inf ++ chara;\n",
+    "                fin=verb.fin ++ chara};\n",
+    "        makeVP2 verb chara = {inf = verb.inf ++ chara;\n",
+    "                fin=verb.fin ++ chara};\n",
+    "        makeVP3 verb chara = {inf = verb.inf ++ chara;\n",
+    "                fin=verb.fin ++ chara};\n",
+    "        --makeVP2 verb = {fin=verb.fin; inf=verb.inf};\n",
+    "\n",
+    "        makeS name vp = name ++ vp.fin;\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3539af04",
+   "execution_count": 47,
+   "id": "54666ed6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7336a571833b4b9e8a2847ca9ee124db",
+       "model_id": "be2cc8cf30d44184a05dd2aeb03ffc05",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(layout=Layout(width='max-content'), options=('0.0. makeS1 peter (makeAP3 ?2 adj)',), value='0.0. make…"
+       "Dropdown(layout=Layout(width='max-content'), options=('0.0. makeS mary (combineVP (makeVP2 (negateHV has) red)…"
       ]
      },
      "metadata": {},
@@ -132,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9e00429a4fa4755960b0f0607945d61",
+       "model_id": "f6532b12bfbd4120b003bae37c451e17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,13 +169,13 @@
     }
    ],
    "source": [
-    "parse \"Peter wears no hat\"| vt"
+    "parse \"Mary doesn't have red hair and wears hat and is not male\"|vt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "9ecb33ad",
+   "execution_count": 49,
+   "id": "918353a0",
    "metadata": {},
    "outputs": [
     {
@@ -166,18 +190,21 @@
    ],
    "source": [
     "theory plnq : ur:?LF =\n",
-    "    prop : type ❘ # o ❙   // type for propositions ❙\n",
-    "    // type for individuals (Ethel, Fido, ...) ❙\n",
-    "    ind : type ❘ # ι ❙   // ι as notation for ind ❙\n",
+    "    prop : type ❘ # o ❙\n",
+    "    ind : type ❘ # ι ❙\n",
     "\n",
-    "    and : o ⟶ o ⟶ o ❘ # 1 ∧ 2 ❙\n",
+    "    and : o ⟶ o ⟶ o ❘ # 1 ∧ 2 prec 50 ❙\n",
+    "    not : o ⟶ o ❘ # ¬ 1 prec 60 ❙\n",
+    "    or : o ⟶ o ⟶ o ❘ # 1 ∨ 2 prec 40 ❘ = [x:o] [y:o] ¬ (¬ x ∧ ¬ y) ❙\n",
+    "    implies : o ⟶ o ⟶ o ❘ = [x:o] [y:o] ¬x∨y ❘ # 1 ⇒ 2 prec 30 ❙\n",
+    "    biimplication : o ⟶ o ⟶ o ❘ = [x:o] [y:o] (x⇒y)∧(y⇒x) ❘ # 1 ⇔ 2 prec 20 ❙\n",
     "❚"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "795530ce",
+   "execution_count": 56,
+   "id": "4e109d4f",
    "metadata": {},
    "outputs": [
     {
@@ -193,25 +220,32 @@
    "source": [
     "theory people : ur:?LF =\n",
     "    include ?plnq ❙\n",
-    "\n",
     "    peter : ι ❘ # peter' ❙\n",
+    "    john : ι ❘ # john' ❙\n",
     "    mary : ι ❘ # mary' ❙\n",
     "    fido : ι ❘ # fido' ❙\n",
-    "    john : ι ❘ # john' ❙\n",
+    "    is : ι ⟶ ι ⟶ o ❘ # is' ❙\n",
+    "    wears : ι ⟶ ι ⟶ o ❘ # wears' ❙\n",
+    "    has : ι ⟶ ι ⟶ o ❘ # has' ❙\n",
+    "    male : ι ❘ # male' ❙\n",
+    "    female : ι ❘ # female' ❙\n",
+    "    hat : ι ❘ # hat'❙\n",
+    "    red : ι ❘# red'❙\n",
+    "    green : ι ❘ #green'❙\n",
+    "    black : ι ❘ #black'❙\n",
     "❚"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "52d60288",
+   "execution_count": 61,
+   "id": "95fbbdde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
-       "<br/><span class=\"glif-stderr\"><b>Errors</b><br/>invalid unit: http://mathhub.info/tmpGLIF/default?GrammarSemantics?[http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar]/makeAP1?definition: Judgment  |- [adj:ι⟶o]adj : ι⟶((ι⟶o)⟶(ι⟶o))<br/>invalid unit: http://mathhub.info/tmpGLIF/default?GrammarSemantics?[http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar]/makeAP1?definition: Judgment  |- [adj:ι⟶o]adj : ι⟶((ι⟶o)⟶(ι⟶o))<br/>invalid unit: http://mathhub.info/tmpGLIF/default?GrammarSemantics?[http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar]/makeAP2?definition: Judgment  |- [adj:ι⟶o]adj : ι⟶((ι⟶o)⟶(ι⟶o))<br/>invalid unit: http://mathhub.info/tmpGLIF/default?GrammarSemantics?[http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar]/makeAP2?definition: Judgment  |- [adj:ι⟶o]adj : ι⟶((ι⟶o)⟶(ι⟶o))<br/>invalid unit: http://mathhub.info/tmpGLIF/default?GrammarSemantics?[http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar]/makeAP3?definition: Judgment  |- [adj:ι⟶o]adj : ι⟶((ι⟶o)⟶(ι⟶o))<br/>invalid unit: http://mathhub.info/tmpGLIF/default?GrammarSemantics?[http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar]/makeAP3?definition: Judgment  |- [adj:ι⟶o]adj : ι⟶((ι⟶o)⟶(ι⟶o))<br/>invalid element: view is not total: http://mathhub.info/tmpGLIF/default?GrammarSemantics</span>"
+       "<span class=\"glif-stdout\">Successfully imported GrammarSemantics.mmt</span>"
       ]
      },
      "metadata": {},
@@ -221,38 +255,78 @@
    "source": [
     "view GrammarSemantics : http://mathhub.info/tmpGLIF/default/Grammar.gf?Grammar -> ?people =\n",
     "    Name = ι ❙\n",
-    "    Adjective = o ❙\n",
-    "    AP = ι ⟶ o❙\n",
+    "    WVerb = ι ⟶ ι ⟶ o ❙\n",
+    "    HVerb = ι ⟶ ι ⟶ o ❙\n",
+    "    BVerb = ι ⟶ ι ⟶ o ❙\n",
+    "    VP = ι ⟶ o ❙\n",
     "    S = o ❙\n",
+    "    Conn = o ⟶ o ⟶ o ❙\n",
+    "    Noun = ι  ❙\n",
+    "    Adj = ι  ❙\n",
+    "    Color = ι ❙\n",
+    "    \n",
     "\n",
-    "    // makeAP1 : Name ⟶ Adjective ⟶ AP ❙\n",
-    "    // makeAP1 : ι ⟶ (ι ⟶ o) ⟶ o ❙\n",
-    "    makeAP1 = [adj:ι⟶ o] adj ❙\n",
-    "    // makeAP2 : Name ⟶ Adjective ⟶ AP ❙\n",
-    "    // makeAP2 : ι ⟶ (ι ⟶ o) ⟶ o ❙\n",
-    "    makeAP2 = [adj:ι⟶ o] adj  ❙\n",
-    "    // makeAP3 : Name ⟶ Adjective ⟶ AP ❙\n",
-    "    // makeAP3 : ι ⟶ (ι ⟶ o) ⟶ o ❙\n",
-    "    makeAP3 = [adj:ι⟶ o] adj ❙\n",
+    "    // makeVP : Verb -> N -> VP; ❙\n",
+    "    makeVP1 = [tv:ι⟶ι⟶o] [n:ι] [x:ι] (tv n) x❙\n",
+    "    makeVP2 = [itv:ι⟶ι⟶o] [n:ι] [x:ι] (itv n) x ❙\n",
+    "    makeVP3 = [itv:ι⟶ι⟶o] [n:ι] [x:ι] (itv n) x ❙\n",
+    "    \n",
     "    // makeS : Name ⟶ VP ⟶ S ❙\n",
-    "    makeS1 = [n:ι][ap:ι ⟶ o] ap n ❙\n",
+    "    makeS = [name:ι][vp:ι⟶o] vp name ❙\n",
+    "    \n",
+    "    // combineVP : VP -> Conn -> VP -> VP; ❙\n",
+    "    combineVP = [vpa: ι⟶o] [c: o⟶o⟶o] [vpb: ι⟶o]\n",
+    "            [x:ι] c (vpa x) (vpb x) ❙\n",
+    "    // combineS : S -> Conn -> S -> S; ❙\n",
+    "    combineS = [x: o] [c: o ⟶ o ⟶ o] [y: o]\n",
+    "                c x y ❙\n",
+    "    // negateVP : Verb -> Verb; ❙\n",
+    "    negateWV = [v: ι⟶ι⟶o] [x:ι] [y:ι] ¬ (v x y) ❙\n",
+    "    negateHV = [v: ι⟶ι⟶o] [x:ι] [y:ι] ¬ (v x y) ❙\n",
+    "    negateBV = [v: ι⟶ι⟶o] [x:ι] [y:ι] ¬ (v x y) ❙\n",
+    "\n",
+    "    and = [x] [y] x ∧ y ❙\n",
+    "    or = [x] [y] x ∨ y ❙\n",
     "\n",
     "    peter = peter' ❙\n",
     "    mary = mary' ❙\n",
     "    fido = fido' ❙\n",
-    "    john = john' ❙\n",
-    "    // love_oneself : ReflexiveVerb ❙\n",
-    "    // love_oneself : ι ⟶ ι ⟶ o ❙\n",
-    "    // love_oneself = [x:ι] [y:ι] love' x y ❙\n",
-    "    \n",
-    "    // and = [a] [b] a ∧ b ❙\n",
+    "    is = is' ❙\n",
+    "    wears = wears' ❙\n",
+    "    has = has' ❙\n",
+    "    male = male' ❙\n",
+    "    female = female' ❙\n",
+    "    hat = hat'❙\n",
+    "    red = red'❙\n",
+    "    green = green'❙\n",
+    "    black = black'❙\n",
     "❚"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "6d669c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"glif-stdout\">(is&#x27; male&#x27; peter&#x27;)∧¬(wears&#x27; hat&#x27; peter&#x27;)</span>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "parse \"Peter is male and doesn't wear hat\" | construct"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "57c81a18",
+   "id": "d1b49774",
    "metadata": {},
    "outputs": [],
    "source": []
