Added ELPI prover with AND rules

--- a/Guess_Who-Copy1.ipynb
+++ b/Guess_Who-Copy1.ipynb
@@ -308,6 +308,148 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8eef6b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"glif-stdout\">Successfully imported prover.elpi</span><br/><span class=\"glif-stdout\">prover.elpi is the new default file for ELPI commands</span>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "elpi: prover\n",
+    "\n",
+    "kind proposition type.\n",
+    "kind proof type.\n",
+    "\n",
+    "% in MMT: and : o ⟶ o ⟶ o \n",
+    "type and proposition -> proposition -> proposition.\n",
+    "type or proposition -> proposition -> proposition.\n",
+    "type impl proposition -> proposition -> proposition.\n",
+    "type not proposition -> proposition.\n",
+    "\n",
+    "% provable is an ELPI predicate that takes 1 proposition\n",
+    "% and returns a proof\n",
+    "type provable proposition -> int -> proof -> prop.\n",
+    "\n",
+    "type wears_hat proposition -> proposition.\n",
+    "type no_hat proposition -> proposition.\n",
+    "type red_hair proposition -> proposition.\n",
+    "type green_hair proposition  -> proposition.\n",
+    "type black_hair proposition -> proposition.\n",
+    "type male proposition -> proposition.\n",
+    "type female proposition  -> proposition.\n",
+    "type other proposition -> proposition.\n",
+    "\n",
+    "type peter proposition.\n",
+    "type mary proposition.\n",
+    "type fido proposition.\n",
+    "type john proposition.\n",
+    "\n",
+    "type a_and_b proof.\n",
+    "type not_a proof.\n",
+    "type gender proof.\n",
+    "type hair proof.\n",
+    "type hat proof.\n",
+    "\n",
+    "% in MMT: andI: ⊢A ⟶ ⊢B ⟶ ⊢A∧B\n",
+    "% normal Prolog: provable(and(A,B)) :- provable(A), provable(B).\n",
+    "type andI proof -> proof -> proof.\n",
+    "% And elimination left\n",
+    "% MMT: andEl : ⊢A∧B ⟶ ⊢A\n",
+    "type andEl proof -> proof.\n",
+    "%And elimination right\n",
+    "type andEr proof -> proof.\n",
+    "\n",
+    "provable (not A) Depth (notI):-\n",
+    "    Depth >0,\n",
+    "    NewDepth is Depth - 1,\n",
+    "    provable\n",
+    "\n",
+    "provable (and A B) Depth (andI SubProof1 SubProof2):-\n",
+    "    Depth > 0,\n",
+    "    NewDepth is Depth - 1,\n",
+    "    provable A NewDepth SubProof1,\n",
+    "    provable B NewDepth SubProof2.\n",
+    "\n",
+    "provable A Depth (andEl SubProof):-\n",
+    "    Depth > 0, NewDepth is Depth - 1,\n",
+    "    provable (and A _B) NewDepth SubProof.\n",
+    "\n",
+    "provable B Depth (andEr SubProof) :-\n",
+    "    Depth > 0, NewDepth is Depth - 1,\n",
+    "    provable (and _A B) NewDepth SubProof. \n",
+    "    \n",
+    "type a proposition.\n",
+    "type b proposition.\n",
+    "\n",
+    "provable (and a b) _Depth a_and_b.\n",
+    "provable (not a) _Depth not_a.\n",
+    "\n",
+    "provable (male peter) _Depth gender.\n",
+    "provable (male john) _Depth gender.\n",
+    "provable (female mary) _Depth gender.\n",
+    "provable (other fido) _Depth gender.\n",
+    "\n",
+    "provable (black_hair peter) _Depth hair.\n",
+    "provable (green_hair john) _Depth hair.\n",
+    "provable (red_hair mary) _Depth hair.\n",
+    "provable (black_hair fido) _Depth hair.\n",
+    "\n",
+    "provable (no_hat peter) _Depth hat.\n",
+    "provable (wears_hat john) _Depth hat.\n",
+    "provable (wears_hat mary) _Depth hat.\n",
+    "provable (wears_hat fido) _Depth hat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c1e037fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"glif-stdout\">Query succeeded<br/>P = andI gender hat</span>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "query \"provable(and(male peter)(wears_hat fido)) 1 P\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a1cc6b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"glif-stdout\">Query failed<br/>P = X0</span>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "query \"provable(not(female peter)) 0 P\""
+   ]
   }
  ],
  "metadata": {
